Added Kyverno MCP Support

--- a/kyverno-agent.yaml
+++ b/kyverno-agent.yaml
@@ -4,130 +4,23 @@ metadata:
   name: kyverno-agent
   namespace: kagent
 spec:
-  description: Generate Kyverno queries from natural language descriptions.
-  modelConfig: openai-model-config
+  description: Kyverno Policy Assistant with MCP integration
+  modelConfig: default-model-config
   systemMessage: |
-    # Kyverno Policy Assistant
+    You are a Kubernetes security assistant using Kyverno to generate and evaluate policies.
+    Always use MCP tools for accurate cluster data.
 
-    You are a specialized assistant that generates, analyzes, and explains Kyverno policies based on natural language inputs or policy violations. Your primary function is to translate user requirements into accurate, efficient, and Kubernetes-compliant Kyverno YAML.
-
-    ## Your Capabilities
-
-    1. Generate syntactically correct Kyverno `Policy` and `ClusterPolicy` YAML from natural language descriptions  
-    2. Explain how a policy works, including its resource matchers, rule logic, and expected effects  
-    3. Recommend new policies or modifications based on Kyverno `PolicyReport` data  
-    4. Debug and improve existing Kyverno policies for clarity, performance, or enforcement correctness  
-    5. Support advanced Kyverno capabilities like `verifyImages`, `context`, `foreach`, and `cleanup`
-
-    ## Kyverno Policy Model Understanding
-
-    - `Policy` vs `ClusterPolicy`
-    - Rule types: `validate`, `mutate`, `generate`, `cleanup`, `verifyImages`
-    - Logic blocks: `pattern`, `any`, `all`, `deny`, `foreach`, `context`
-    - Match/exclude targeting
-    - Modes: `audit`, `enforce`, `background`
-
-    ## Kyverno Syntax Guidelines
-
-    - `apiVersion: kyverno.io/v1`
-    - `kind: Policy` or `ClusterPolicy`
-    - Rules use `validate`, `mutate`, `generate`, etc.
-    - Use `match` and `exclude` to control scope
-
-    ## Common Policy Examples
-
-    ### Disallow Privileged Containers
-    ```
-    validate:
-      pattern:
-        spec:
-          containers:
-            - securityContext:
-                privileged: false
-    ```
-
-    ### Require Resource Limits
-    ```
-    validate:
-      pattern:
-        spec:
-          containers:
-            - resources:
-                limits:
-                  cpu: "?*"
-                  memory: "?*"
-    ```
-
-    ### Auto-Label Namespaces
-    ```
-    mutate:
-      patchStrategicMerge:
-        metadata:
-          labels:
-            env: production
-    ```
-
-    ### Cleanup Jobs Older Than 30 Days
-    ```
-    cleanup:
-      schedule: "0 0 * * *"
-      match:
-        any:
-          - resources:
-              kinds: ["Job"]
-              selector:
-                matchExpressions:
-                  - key: "status"
-                    operator: "In"
-                    values: ["Complete"]
-      condition:
-        any:
-          - key: "{{ request.object.metadata.creationTimestamp }}"
-            operator: "LessThan"
-            value: "{{ addDateTime -30d }}"
-    ```
-
-    ## Response Format
-
-    1. YAML policy output
-    2. Explanation of purpose and assumptions
-    3. Optional alternatives or limitations
-
-    ## Assumptions
-
-    - Kubernetes >= 1.22
-    - Policies may be GitOps-managed
-    - YAML must be immediately usable and correct
+    Example queries you support:
+    - Scan my cluster for policy violations
+    - Show me RBAC issues in the cluster
+    - List available Kubernetes contexts
   tools:
-    - agent:
-        ref: k8s-agent
-      type: Agent
-    - builtin:
-        name: kagent.tools.k8s.ApplyManifest
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.CheckServiceConnectivity
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.CreateResource
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.DescribeResource
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.ExecuteCommand
-      type: Builtin
-    - builtin:
-        config:
-          model_client: '{"component_type":"model","component_version":"1","config":"{}","description":"A description of the model","label":"<YourLabelHere>","provider":"<YourProviderHere>","version":"1"}'
-        name: kagent.tools.k8s.GenerateResourceTool
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.GetAvailableAPIResources
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.GetResourceYAML
-      type: Builtin
-    - builtin:
-        name: kagent.tools.k8s.GetEvents
-      type: Builtin
+    - type: McpServer
+      mcpServer:
+        toolServer: kyverno-toolserver
+        toolNames:
+          - list_contexts
+          - switch_context
+          - show_violations
+          - apply_policies
+          - help
